# gate-agent

./: .gitignore  .secrets.dev  .secrets.example  AGENTS.md  Cargo.toml  LICENSE  README.md  docker-compose.yml  install.sh
.github/workflows/: ci.yml  prepare-release.yml  release.yml
dev/upstream-dummy/: server.mjs
docs/: auth.md  cli.md  config.md  local-testing.md  mcp.md  pending.md  proxy.md  release.md  runtime.md
examples/: apis.toml
examples/docker/: Dockerfile  start.sh
src/: cli.rs  error.rs  lib.rs  main.rs  telemetry.rs  time.rs
src/app/: mod.rs  state.rs
src/auth/: bearer.rs  claims.rs  exchange.rs  jwt.rs  mod.rs
src/commands/: config.rs  curl.rs  curl_payload.rs  mod.rs  start.rs  version.rs
src/config/: app_config.rs  crypto.rs  keyring.rs  mod.rs  password.rs  path.rs  secrets.rs  write.rs
src/mcp/: protocol.rs  router.rs  tools.rs
src/proxy/: forward.rs  mod.rs  request.rs  response.rs  router.rs  upstream.rs
tests/: app_state_auth.rs  auth_exchange.rs  auth_module_exports.rs  bearer_validation.rs  cli_config.rs  cli_curl_payload.rs  cli_start.rs  cli_surface.rs  command_dispatch.rs  config_cli_build.rs  config_keyring.rs  config_loading.rs  config_module.rs  config_path_resolution.rs  config_writing.rs  install_contract.rs  jwt_claims.rs  jwt_validation.rs  logging_filtering.rs  mcp_http.rs  password_resolution.rs  prepare_release_workflow_contract.rs  proxy_end_to_end.rs  proxy_request_mapping.rs  proxy_upstream_timeouts.rs  readme_release_contract.rs  release_workflow_contract.rs  secrets_loading.rs
tests/support/: mod.rs
thoughts/shared/plans/: 2026-04-06-rust-cli-proxy-mvp.md
