[package]
name = "gate-agent"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[lib]
name = "gate_agent"
path = "src/lib.rs"

[[bin]]
name = "gate-agent"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
bytes = "1.10"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
http = "1.3"
http-body-util = "0.1"
libc = "0.2"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
thiserror = "2.0"
tokio = { version = "1.45", features = ["macros", "net", "rt-multi-thread", "signal", "time"] }
toml = "0.8"
toml_edit = "0.22"
tower = { version = "0.5", features = ["timeout", "util"] }
tower-http = { version = "0.6", features = ["catch-panic", "request-id", "timeout", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
url = "2.5"

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.18"
wiremock = "0.6"
