[package]
name = "gate-agent"
version = "0.0.2"
edition = "2024"
rust-version = "1.85"
license = "MIT"

[lib]
name = "gate_agent"
path = "src/lib.rs"

[[bin]]
name = "gate-agent"
path = "src/main.rs"

[dependencies]
age = { version = "0.11", features = ["armor"] }
axum = { version = "0.8", features = ["macros"] }
base64 = "0.22"
bytes = "1.10"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
futures-util = "0.3"
http = "1.3"
http-body-util = "0.1"
keyring = { version = "3.6", default-features = false, features = ["apple-native", "linux-native"] }
libc = "0.2"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rpassword = "7.4"
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
subtle = "2.6"
tempfile = "3.18"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
thiserror = "2.0"
tokio = { version = "1.45", features = ["macros", "net", "rt-multi-thread", "signal", "time"] }
toml = "0.8"
toml_edit = "0.22"
tower = { version = "0.5", features = ["timeout", "util"] }
tower-http = { version = "0.6", features = ["catch-panic", "request-id", "timeout", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
url = "2.5"
dialoguer = "0.11"

[dev-dependencies]
assert_cmd = "2.0"
wiremock = "0.6"
